create function to replace vowels with dashes, and print it to the DOM

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <title>world puzzle</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>world Puzzle</h1>
+        <form id="formy">
+            <div class="form-group">
+                <label for="sentence">Please enter a sentence</label>
+                <input id="sentence" class="form-control" type="text">
+                </div>
+            <button type="submit" class="btn btn-success">submit</button>
+        </form>
+
+        <br><br><br><br>
+        <div class="output">
+
+        </div>
+    </div>
 </body>
 </html>
